# TicTacToe

./: CMakeLists.txt  Makefile  README.txt
include/: Settings.h
include/engine/: AnimationHandler.h  BackgroundShapes.h  Button.h  DisplayManager.h  InputManager.h  TTFHandler.h  View.h
include/game/: Board.h  Game.h  Login.h  Scoreboard.h
include/mainmenu/: MainMenu.h
include/scores/: Leaderboard.h
src/: main.cpp  settings.cpp
src/engine/: animationhandler.cpp  backgroundshapes.cpp  button.cpp  displaymanager.cpp  imghandler.cpp  inputmanager.cpp  resourcemanager.cpp  timemanager.cpp  ttfhandler.cpp  utils.cpp  viewmanager.cpp  windowmanager.cpp
src/game/: board.cpp  game.cpp  login.cpp  scoreboard.cpp
src/mainmenu/: mainmenu.cpp
src/scores/: leaderboard.cpp
